# stellar-cascade

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  stellar-cascade-ARCHITECTURE .md
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-00f6f49c316487aa610d7b6fc560d60a1f16999da724189505b7510cfe16d0bc.json  query-09062301b3adb447c0d819839cf3c1597fc39224683dd8b53894ddc428d831a6.json  query-1e1e6811adc71664722a06d7bd70d715af7d495cb2227d352bf09797ba312c5f.json  query-31882a4c086e6a051a03119a37a1c3b407d853e6c7ef0d85c97b06d9fc6b890c.json  query-40a1153b9606f2b3b6fb1ea9bc96d498c3b4c19800d3cb1bfdb2641286cf6a90.json  query-5f89caf9349a281c1e473ac759f732a5131338dd57eb9f3fc30c697b89c0ec36.json  query-b2f187a3401e4600258b6bb457f7ec0af6c2bbadbdd7d5a58b9429b0a16459fb.json  query-c746a6687736607e21504522cc7ffd532d13813dd7ee21082ad566def66f9a49.json  query-d4a69b4cbdd5638d0d23cd5da9f3cd198d11000432c14873b8563737e284571c.json  query-ebc54647ea983233e4ec74daf0a0f5a20500b67c8bf38b88217a4057a84564b4.json
backend/docs/: schema-design.md
backend/migrations/: 20260712095711_create_projects_table.sql  20260712100908_create_splits_table.sql  20260712101035_create_balances_table.sql  20260712101522_create_sync_tables.sql  20260712182400_add_event_id_to_sync_events.sql
backend/src/: config.rs  db.rs  event_decode.rs  lib.rs  main.rs  soroban_rpc.rs  sync_poll.rs  sync_state.rs  sync_worker.rs
backend/src/routes/: health.rs
backend/tests/: integration_test.rs
cascade/: create_issues.sh  issue-06.md  issue-07.md  issue-08.md  issue-09.md  issue-10.md  issue-11.md  issue-12.md  issue-13.md  issue-14.md  issue-15.md  issue-16.md  issue-17.md  issue-18.md  issue-19.md  issue-20.md  (+10 more)
(+72 files in other folders)
