[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.150"
tower = { version = "0.5.3", features = ["util"] }
