[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate"] }
stellar-rpc-client = "27.0.0"
stellar-strkey = "0.0.9"
stellar-xdr = { version = "27.0.0", features = ["base64"] }
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
dotenvy = "0.15.7"
http-body-util = "0.1.3"
serde_json = "1.0.150"
tower = { version = "0.5.3", features = ["util"] }
